# IsometricMapModule

./: .clang-format  .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  SCsub  register_types.cpp  register_types.h
.github/actions/create-android-export-template/: action.yaml
.github/workflows/: check-pr-engine-editor-debug.yaml  check-pr-engine-editor-release.yaml  check-pr-engine-export-template-debug.yaml  check-pr-engine-export-template-release.yaml
demo/: Character.tscn  DojoCamera.gd  IsometricPositionable.tscn  README.md  block.tscn  default_env.tres  icon.png.import  innerMapSet.tres  new_positionableset.tres  player_movement.gd  project.godot
demo/assets/: block_E.png.import  duck_left.png.import  duck_right.png.import
demo/dojo/: Dojo.tscn  Dojobig100x100x10.tscn
demo/maps/: dojobigmap.tscn  dojomap.tscn  innerMap.tscn  outerMap.tscn  paradox.tscn  test.tscn  testHierarchy.tscn
demo/maps/resize_map_tets/: inner_set.tres  innermap.tscn  mainmap.tscn  set.tres
docs/: mkdocs.yml
docs/src/doc/: index.md
docs/src/doc/user-guide/: 1-creating-tiles.md  2-creating-positionable-set.md  3-creating-map.md  4-command-list.md  4-command-recap.md
src/: .clang-format  constants.h  isometric_api.cpp  isometric_api.h  isometric_config.cpp  isometric_config.h  isometric_positionable_data.cpp  isometric_positionable_data.h  isometric_server.cpp  isometric_server.h  isometric_string_names.cpp  isometric_string_names.h  isometric_world.cpp  isometric_world.h  isometric_world_data.cpp  isometric_world_data.h  logging.h  variant_casters.h
src/containers/: grid_3d.cpp  grid_3d.h
src/data/: chunk.h  isometric_element.cpp  isometric_element.h  isometric_parameters.cpp  isometric_parameters.h  isometric_positionable_data.cpp  isometric_positionable_data.h  isometric_space.cpp  isometric_space.h  isometric_world_data.cpp  isometric_world_data.h
src/editor/: edition_grid.cpp  edition_grid.h  edition_grid_drawer.cpp  edition_grid_drawer.h  editor_axes.h  editor_plane.cpp  editor_plane.h  editor_utils.cpp  editor_utils.h  isometric_editor_plugin.cpp  isometric_editor_plugin.h  isometric_tile_editor_plugin.cpp  isometric_tile_editor_plugin.h  outline_data.cpp  outline_data.h  outline_drawer.cpp  outline_drawer.h  positionable_scenes_cache_manager.cpp  positionable_scenes_cache_manager.h  positionable_selection_pane.cpp  positionable_selection_pane.h  positionable_selector_manager.cpp  positionable_selector_manager.h  positionable_set.cpp  positionable_set.h  positionable_set_editor_plugin.cpp  positionable_set_editor_plugin.h  viewport_swap_buffer.cpp  viewport_swap_buffer.h
src/editor/commands/: add_layer_command.cpp  add_layer_command.h  add_positionable_command.cpp  add_positionable_command.h  change_layer_name_command.cpp  change_layer_name_command.h  command.cpp  command.h  composite_command.cpp  composite_command.h  move_editor_plane_command.cpp  move_editor_plane_command.h  move_to_layer_command.cpp  move_to_layer_command.h  revert_command.cpp  revert_command.h  rotate_editor_plane_command.cpp  rotate_editor_plane_command.h  select_positionable_command.cpp  select_positionable_command.h  set_layer_visibility_command.cpp  set_layer_visibility_command.h  set_positionable_visibility_command.cpp  set_positionable_visibility_command.h  set_positionables_visibility_command.cpp  set_positionables_visibility_command.h
src/editor/commands/emitters/: command_emitter.h  command_to_action_transformer.h  delete_command_emitter.cpp  delete_command_emitter.h  drag_and_drop_command_emitter.cpp  drag_and_drop_command_emitter.h  fill_plan_command_emitter.cpp  fill_plan_command_emitter.h  move_editor_grid_command_emitter.cpp  move_editor_grid_command_emitter.h  move_editor_plane_command_emitter.cpp  move_editor_plane_command_emitter.h  move_editor_view_limiter_command_emitter.cpp  move_editor_view_limiter_command_emitter.h  move_selection_command_emitter.cpp  move_selection_command_emitter.h  painting_command_emitter.cpp  painting_command_emitter.h  rotate_editor_plane_command_emitter.cpp  rotate_editor_plane_command_emitter.h  select_all_command_emitter.cpp  select_all_command_emitter.h  (+2 more)
src/editor/inspector/: fix_set_dialog.cpp  fix_set_dialog.h  inspector_button.cpp  inspector_button.h  layers_editor.cpp  layers_editor.h  positionable_selection_pane.cpp  positionable_selection_pane.h  positionable_set_editor.cpp  positionable_set_editor.h  positionable_set_inspector.cpp  positionable_set_inspector.h
src/node/: isometric_map.cpp  isometric_map.h  isometric_positionable.cpp  isometric_positionable.h
src/node/physics/: isometric_body_base.h  isometric_kinematic_body.cpp  isometric_kinematic_body.h  isometric_rigid_body.cpp  isometric_rigid_body.h  isometric_static_body.cpp  isometric_static_body.h
src/physics/: default_body.h  default_kinematic_body.cpp  default_kinematic_body.h  default_static_body.cpp  default_static_body.h
src/positionable/: dynamic_isometric_element.cpp  dynamic_isometric_element.h  isometric_element.h  isometric_map.cpp  isometric_map.h  isometric_placeholder.cpp  isometric_placeholder.h  isometric_positionable.cpp  isometric_positionable.h  isometric_tile.cpp  isometric_tile.h  placeholder_type.cpp  placeholder_type.h  static_isometric_element.cpp  static_isometric_element.h
src/positionable/physics/: default_body.h  default_kinematic_body.cpp  default_kinematic_body.h  default_static_body.cpp  default_static_body.h
src/resource/: isometric_configuration.cpp  isometric_configuration.h  placeholder_type.cpp  placeholder_type.h  positionable_set.cpp  positionable_set.h
src/utils/: isometric_maths.h
